// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`classic components basic 1`] = `
"==========

    export default Component.extend({
    });

~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

    export default Component.extend({
        tagName: \\"\\"
    });

~~~~~~~~~~
<div ...attributes>
  foo
</div>
=========="
`;

exports[`handles \`ariaRole\` correctly 1`] = `
"==========

    export default Component.extend({
      ariaRole: 'button',
    });

~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

    export default Component.extend({
      tagName: \\"\\",
    });

~~~~~~~~~~
<div role=\\"button\\" ...attributes>
  foo
</div>
=========="
`;

exports[`handles \`attributeBindings\` correctly 1`] = `
"==========

    export default Component.extend({
      attributeBindings: ['foo', 'bar:baz'],
    });

~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

    export default Component.extend({
      tagName: \\"\\",
    });

~~~~~~~~~~
<div foo={{this.foo}} baz={{this.bar}} ...attributes>
  foo
</div>
=========="
`;

exports[`classic components handles \`classNameBindings\` correctly 1`] = `
"==========

    export default Component.extend({
      classNameBindings: ['a:b', 'x:y:z', 'foo::bar'],
    });

~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

    export default Component.extend({
      tagName: \\"\\",
    });

~~~~~~~~~~
<div class=\\"{{if this.a \\"b\\"}} {{if this.x \\"y\\" \\"z\\"}} {{unless this.foo \\"bar\\"}}\\" ...attributes>
  foo
</div>
=========="
`;

exports[`classic components handles \`classNames\` correctly 1`] = `
"==========

    export default Component.extend({
      classNames: ['foo', 'bar:baz'],
    });

~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

    export default Component.extend({
      tagName: \\"\\",
    });

~~~~~~~~~~
<div class=\\"foo bar:baz\\" ...attributes>
  foo
</div>
=========="
`;

exports[`classic components handles \`elementId\` correctly 1`] = `
"==========

    export default Component.extend({
      elementId: 'qux',
    });

~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

    export default Component.extend({
      tagName: \\"\\",
    });

~~~~~~~~~~
<div id=\\"qux\\" ...attributes>
  foo
</div>
=========="
`;

exports[`classic components handles \`hasComponentCSS\` option correctly 1`] = `
"==========

    export default Component.extend({
      classNames: ['foo', 'bar:baz'],
    });

~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

    export default Component.extend({
      tagName: \\"\\",
    });

~~~~~~~~~~
<div class=\\"{{styleNamespace}} foo bar:baz\\" ...attributes>
  foo
</div>
=========="
`;

exports[`classic components handles single \`classNames\` item correctly 1`] = `
"==========

    export default Component.extend({
      classNames: ['foo'],
    });

~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

    export default Component.extend({
      tagName: \\"\\",
    });

~~~~~~~~~~
<div class=\\"foo\\" ...attributes>
  foo
</div>
=========="
`;

exports[`classic components multi-line template 1`] = `
"==========
export default Component.extend({});
~~~~~~~~~~
{{#if this.foo}}
  FOO
{{else}}
  BAR
{{/if}}
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~
export default Component.extend({
  tagName: \\"\\"
});
~~~~~~~~~~
<div ...attributes>
  {{#if this.foo}}
    FOO
  {{else}}
    BAR
  {{/if}}
</div>
=========="
`;

exports[`classic components replaces existing \`tagName\` 1`] = `
"==========

    export default Component.extend({
      tagName: 'span',
    });

~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: span
~~~~~~~~~~

    export default Component.extend({
      tagName: \\"\\",
    });

~~~~~~~~~~
<span ...attributes>
  foo
</span>
=========="
`;

exports[`native components basic 1`] = `
"==========

      export default class FooComponent extends Component {
      }

~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

      import { tagName } from \\"@ember-decorators/component\\";
      @tagName(\\"\\")
      export default class FooComponent extends Component {
      }

~~~~~~~~~~
<div ...attributes>
  foo
</div>
=========="
`;

exports[`native components handles \`@attribute\` and \`@attributeBindings\` correctly 1`] = `
"==========

      import { attribute, attributeBindings } from '@ember-decorators/component';

      @attributeBindings('foo')
      export default class FooComponent extends Component {
        @attribute('baz') bar;
      }
    
~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

      import { tagName } from '@ember-decorators/component';

      @tagName(\\"\\")
      export default class FooComponent extends Component {
        bar;
      }
    
~~~~~~~~~~
<div foo={{this.foo}} baz={{this.bar}} ...attributes>
  foo
</div>
=========="
`;

exports[`native components handles \`@attribute\` correctly 1`] = `
"==========

      import { attribute } from '@ember-decorators/component';

      export default class FooComponent extends Component {
        @attribute foo;
        @attribute('baz') bar;
      }
    
~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

      import { tagName } from '@ember-decorators/component';

      @tagName(\\"\\")
      export default class FooComponent extends Component {
        foo;
        bar;
      }
    
~~~~~~~~~~
<div foo={{this.foo}} baz={{this.bar}} ...attributes>
  foo
</div>
=========="
`;

exports[`native components handles \`@attributeBindings\` correctly 1`] = `
"==========

      import { attributeBindings } from '@ember-decorators/component';

      @attributeBindings('foo', 'bar:baz')
      export default class FooComponent extends Component {
      }

~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

      import { tagName } from '@ember-decorators/component';

      @tagName(\\"\\")
      export default class FooComponent extends Component {
      }

~~~~~~~~~~
<div foo={{this.foo}} baz={{this.bar}} ...attributes>
  foo
</div>
=========="
`;

exports[`native components handles \`@classNameBindings\` correctly 1`] = `
"==========

      import { classNameBindings } from '@ember-decorators/component';

      @classNameBindings('a:b', 'x:y:z', 'foo::bar')
      export default class FooComponent extends Component {
      }
    
~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

      import { tagName } from '@ember-decorators/component';

      @tagName(\\"\\")
      export default class FooComponent extends Component {
      }
    
~~~~~~~~~~
<div class=\\"{{if this.a \\"b\\"}} {{if this.x \\"y\\" \\"z\\"}} {{unless this.foo \\"bar\\"}}\\" ...attributes>
  foo
</div>
=========="
`;

exports[`native components handles \`@classNames\` correctly 1`] = `
"==========

      import { classNames } from '@ember-decorators/component';

      @classNames('foo', 'bar:baz')
      export default class FooComponent extends Component {
      }
    
~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

      import { tagName } from '@ember-decorators/component';

      @tagName(\\"\\")
      export default class FooComponent extends Component {
      }
    
~~~~~~~~~~
<div class=\\"foo bar:baz\\" ...attributes>
  foo
</div>
=========="
`;

exports[`native components handles \`elementId\` correctly 1`] = `
"==========

      export default class FooComponent extends Component {
        elementId = 'qux';
      }

~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

      import { tagName } from \\"@ember-decorators/component\\";
      @tagName(\\"\\")
      export default class FooComponent extends Component {}

~~~~~~~~~~
<div id=\\"qux\\" ...attributes>
  foo
</div>
=========="
`;

exports[`native components handles \`hasComponentCSS\` option correctly 1`] = `
"==========

      import { classNames } from '@ember-decorators/component';

      @classNames('foo', 'bar:baz')
      export default class extends Component {
      }
    
~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

      import { tagName } from '@ember-decorators/component';

      @tagName(\\"\\")
      export default class extends Component {
      }
    
~~~~~~~~~~
<div class=\\"{{styleNamespace}} foo bar:baz\\" ...attributes>
  foo
</div>
=========="
`;

exports[`native components handles single \`@classNames\` item correctly 1`] = `
"==========

      import { classNames } from '@ember-decorators/component';

      @classNames('foo')
      export default class FooComponent extends Component {
      }
    
~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~

      import { tagName } from '@ember-decorators/component';

      @tagName(\\"\\")
      export default class FooComponent extends Component {
      }
    
~~~~~~~~~~
<div class=\\"foo\\" ...attributes>
  foo
</div>
=========="
`;

exports[`native components multi-line template 1`] = `
"==========
export default class extends Component {};
~~~~~~~~~~
{{#if this.foo}}
  FOO
{{else}}
  BAR
{{/if}}
~~~~~~~~~~
 => tagName: div
~~~~~~~~~~
import { tagName } from \\"@ember-decorators/component\\";
@tagName(\\"\\")
export default class extends Component {}
~~~~~~~~~~
<div ...attributes>
  {{#if this.foo}}
    FOO
  {{else}}
    BAR
  {{/if}}
</div>
=========="
`;

exports[`native components replaces existing \`tagName\` 1`] = `
"==========

      import { tagName } from '@ember-decorators/component';

      @tagName('span')
      export default class FooComponent extends Component {
      }

~~~~~~~~~~
foo
~~~~~~~~~~
 => tagName: span
~~~~~~~~~~

      import { tagName } from '@ember-decorators/component';

      @tagName(\\"\\")
      export default class FooComponent extends Component {
      }

~~~~~~~~~~
<span ...attributes>
  foo
</span>
=========="
`;
